chore: remove polkaj and tuples, and copy to project